docs: Swagger API 문서 주석 개선 및 로그 마스킹 버그 수정
